# voice

./: .gitignore  MODEL_LICENSES.md  NOTICE  README.md  pyproject.toml  requirements.txt
configs/: call_mode.example.json  model_manifest.json  modes.json
docs/: LOCAL_RUNTIME.md  PATTERN_RUNTIME.md  PUBLISHING.md  RUNTIME_VERSIONS.md
licenses/: THIRD_PARTY.md
requirements/: speaker-encoder-wespeaker.txt
scripts/: apply_spectral_delta_adapter.py  check_publish_ready.py  check_quality_runtime.py  check_runtime.py  create_test_input.py  download_models.py  download_voxcpm2.py  evaluate_voice_quality.py  fetch_sources.ps1  install_argos_language_packages.py  prepare_public_voice_samples.py  run_fast_cpu.ps1  setup_all.ps1  setup_backends.ps1  setup_public_voice_test.ps1  setup_qwen3_tts.ps1  setup_runtime.ps1  setup_speaker_encoder.ps1  setup_test_environment.ps1  smoke_qwen3_tts_generate.py  smoke_voxcpm2_generate.py  validate_style_plan.py
tests/: test_cli_contracts.py  test_content_units.py  test_qwen3_tts_decoder.py  test_spectral_delta_adapter.py  test_voxcpm2_decoder.py
voice_engine/: __init__.py  paths.py
voice_engine/adapters/: __init__.py  decoder_wrapper.py  spectral_delta_adapter.py
voice_engine/asr/: base.py  faster_whisper.py  whisper_cpp.py
voice_engine/audio/: devices.py  routing.py  stream.py  vad.py
voice_engine/content/: __init__.py  units.py
voice_engine/decoders/: __init__.py  audio_payload.py  base.py  qwen3_tts_decoder.py  qwen3_tts_subprocess_fallback.py  qwen3_tts_worker.py  voxcpm2_decoder.py
voice_engine/mt/: argos.py  base.py  (+1 more)
(+18 files in other folders)
