[project]
name = "voice-engine"
version = "0.2.0"
description = "Real-time speech translation bridge with VoxCPM2 voice generation."
requires-python = ">=3.10"
dependencies = [
  "numpy==2.4.6",
  "librosa==0.11.0",
  "soundfile==0.14.0",
]

[project.optional-dependencies]
audio = [
  "numpy==2.4.6",
  "sounddevice==0.5.5",
]
translate = [
  "argostranslate==1.11.0",
]
balanced = [
  "faster-whisper==1.2.1",
  "argostranslate==1.11.0",
]
quality = [
  "faster-whisper==1.2.1",
]
voxcpm2 = [
  "torch==2.12.1",
  "huggingface-hub==1.22.0",
  "voxcpm==2.0.3",
  "transformers==5.13.0",
]
adapter = [
  "librosa==0.11.0",
  "soundfile==0.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_engine*"]
